--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name=".Config.MyApplication"
@@ -119,7 +120,9 @@
             android:exported="false" />
         <activity
             android:name=".Activitys.DashBoardActivity"
-            android:exported="false" />
+            android:exported="false"
+
+            />
         <activity
             android:name=".Logins.ForgotActivity"
             android:exported="false" />
@@ -134,7 +137,9 @@
             android:exported="false" />
         <activity
             android:name=".Activitys.SplashActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:launchMode="singleTop"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -142,8 +147,9 @@
         </activity>
 
         <service
-            android:name=".Config.MyFirebaseMessagingService"
-            android:exported="true">
+            android:name=".MyFirebaseMessagingService"
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
@@ -151,10 +157,14 @@
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@mipmap/ic_launcher" />
+            android:resource="@drawable/ic_notification" />
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorPrimary" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/notificatin_channel" />
+
         <meta-data
             android:name="com.onesignal.NotificationAccentColor.DEFAULT"
             android:value="@color/colorPrimary" />
