--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
+
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
@@ -30,7 +31,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Disability"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".Activitys.ChatListActivity"
+            android:exported="false" />
         <activity
             android:name=".Activitys.EnquiryProductActivity"
             android:exported="false" />
@@ -120,7 +124,7 @@
             android:exported="false" />
         <activity
             android:name=".Activitys.DashBoardActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Logins.ForgotActivity"
             android:exported="false" />
@@ -139,6 +143,7 @@
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -151,7 +156,6 @@
             </intent-filter>
         </service>
 
-
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_notification" />
@@ -161,16 +165,12 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/notificatin_channel" />
-
         <meta-data
             android:name="com.onesignal.NotificationAccentColor.DEFAULT"
-            android:value="@color/colorPrimary" />
-
-<!--        map-->
+            android:value="@color/colorPrimary" /> <!-- map -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCMpzC9h1qmCRgC6SYHVzKhn4vFHztXp-A" />
-
     </application>
 
 </manifest>
